--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 title: Gwanos Blog
-cover: 'assets/images/cover1.jpg'
+cover: '/assets/images/cover1.jpg'
 class: 'home-template'
 navigation: True
-logo: 'assets/images/ghost.png'
+logo: '/assets/images/ghost.png'
 current: home
 ---
 <!-- < default -->
@@ -12,9 +12,9 @@ current: home
 
 <!-- The big featured header  -->
 <header class="main-header {% if page.cover %}"
-        style="background-image: url({{ site.baseurl }}/{{ page.cover }}) {% else %}no-cover{% endif %}">
+        style="background-image: url({{ site.baseurl }}{{ page.cover }}) {% else %}no-cover{% endif %}">
     <nav class="main-nav overlay clearfix">
-        {% if page.logo %}<a class="blog-logo" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/{{ page.logo }}" alt="Blog Logo" /></a>{% endif %}
+        {% if page.logo %}<a class="blog-logo" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}{{ page.logo }}" alt="Blog Logo" /></a>{% endif %}
         {% if page.navigation %}
             <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
         {% endif %}
