--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 title: Gwanos Blog
-cover: '/assets/images/cover1.jpg'
+cover: 'assets/images/cover1.jpg'
 class: 'home-template'
 navigation: True
-logo: '/assets/images/ghost.png'
+logo: 'assets/images/ghost.png'
 current: home
 ---
 <!-- < default -->
